Bug 1518795 - Properly track responsive content in a connected ShadowRoot. r=smaug

Took more to write the test than the fix :)

Differential Revision: https://phabricator.services.mozilla.com/D16055